<?xml version="1.0"?>
<package format="3">
  <name>scan_to_mavlink</name>
  <version>0.0.1</version>
  <description>Convert RPLIDAR scan to OBSTACLE_DISTANCE</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>scan_to_mavlink_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
