<?xml version="1.0"?>
<package format="3">
  <name>scan_to_mavlink_interfaces</name>
  <version>0.0.0</version>
  <description>Custom MAVLink message interfaces for obstacle distance</description>
  <maintainer email="Hendrik@todo.todo">Hendrik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
